     German, Hungarian, Russian, Slovak, Spanish, Turkish, Valencian
 * graphics:
   * more elvish portraits
 * multiplayer:
   * revised maps: Cynsaun Battlefield
   * messages will no longer default to the private channel when observing
     or joining a new game
   * fixed an invalid vector access, which could happen since linger mode
     didn't reset the player_numer_ (bug #11094)
 * sound:
   * added new music track, "Knalgan Theme" by Ryan Reilly.
   * added new music track, "The King is Dead" by Mattias Westlund.
   * updated music track, "Traveling Minstrels" by Mattias Westlund.
   * changed the default story screen music from loyalists.ogg to revelation.ogg
   * added new music track, "Nunc Dimittis" by Jeremy Nicoll.
   * added new music track, "The City Falls" by Doug Kaufman.
 * WML engine:
   * fixed a bug where addons with recusive INCLUDES could no longer be loaded
     (bug #11160)
 * miscellaneous and bug fixes:
   * units with a death sound but no death animation now play their death
     sound correctly
   * selection animations are not directional when standing animations are
     disabled (bug #11151)
   * Fixed parser problems with \r\r in files
   * cleanups and a compiler fix based on patch #911
   * the detection of the savegame version was done after parsing the savegame
     this could lead to crashes when loading 1.2 savegames (debian bug 467088)
   * fix a bug where the random map generator could place a keep on the border
     (bug #11150)
   * Fixed UI sounds toggle crash on Windows

Version 1.3.19:
 * map editor:
   * activate border transitions in the editor using more translucent images
     than used ingame
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Filipino, French, Hungarian,
     Italian, Lithuanian, Polish, Turkish
 * miscellaneous and bug fixes:
   * Fixed chat log viewing crash after undo
   * Fixed era events loading
   * Idle, standing and selection animations are not accelerated anymore